--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-HELP.md
+
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -27,7 +28,7 @@ target/
 /.nb-gradle/
 build/
 !**/src/main/**/build/
-!**/src/test/**/build/
+-+------------69!**/src/test/**/build/
 
 .vscode/
 .gradle
